# InteracTor

./: InteracTor.py  README.md  examples.csv  features.txt  l_result_result.txt  pyproject.toml
Scripts/: Classification.ipynb  Classification.py  Heatmap.R  Heatmap.ipynb  Heatmap.py  ROC.ipynb  UMAP3D_Analysis.ipynb  UMAP3D_Analysis.py  UMAP_Analysis.ipynb  UMAP_Analysis.py  Wilcoxon.R  drop.txt  explainable_AInteracTor.ipynb  featureSelection.ipynb  featureSelection.py  get_PDB_files_unique_chains.ipynb  plots.ipynb  shap_ultils.py  shap_utils.ipynb
data/: protein.pdb.mol2
interactor/: InteracTor.py  __init__.py
