
[tool.poetry]
name = "InteracTor"
version = "0.1.0"
description = "InteracTor is a tool for molecular structure analysis and conversion, allowing the extraction of interactions and relevant features for biochemical studies"
authors = ["Jose Cleydson F Silva <jferreiradasilva@ufl.edu>"]
license = "MIT"

packages = [
    { include = "InteracTor.py" },
    { include = "asa" },
    { include = "file_H-Bonds.pdb" },
    { include = "l_result_result.txt" },
    { include = ".features.txt"},
    ]

include = [
    "examples/**",
    "asa/**",
    "*.log",
    "*.pdb",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
InteracTor = "InteracTor:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

